Java21 build only